Minor update to text and references

--- a/text/bibtex/library_vitd.bib
+++ b/text/bibtex/library_vitd.bib
@@ -1854,6 +1854,25 @@
   Shorttitle               = {Second to fourth digit ratio ({2D}}
 }
 
+@Article{muller_circulating_2014,
+  Title                    = {Circulating 25-Hydroxyvitamin D3 in Relation to Renal Cell Carcinoma Incidence and Survival in the {EPIC} Cohort},
+  Author                   = {Muller, David C. and Fanidi, Anouar and Midttun, {\O}ivind and Steffen, Annika and Dossus, Laure and Boutron-Ruault, Marie-Christine and Severi, Gianluca and K\"uhn, Tilman and Katzke, Verena and Torre, Ram\'on Alonso de la and Gonz\'alez, Carlos A. and S\'anchez, Mar\'ia-Jos\'e and Dorronsoro, Miren and Santiuste, Carmen and Barricarte, Aurelio and Khaw, Kay-Tee and Wareham, Nick and Travis, Ruth C. and Trichopoulou, Antonia and Giotaki, Maria and Trichopoulos, Dimitrios and Palli, Domenico and Krogh, Vittorio and Tumino, Rosario and Vineis, Paolo and Panico, Salvatore and Tj\onneland, Anne and Olsen, Anja and Bueno-de-Mesquita, H. Bas and Peeters, Petra H. and Ljungberg, B\"orje and Wennberg, Maria and Weiderpass, Elisabete and Murphy, Neil and Riboli, Elio and Ueland, Per Magne and Boeing, Heiner and Brennan, Paul and Johansson, Mattias},
+  Journal                  = {American Journal of Epidemiology},
+  Year                     = {2014},
+
+  Month                    = sep,
+  Pages                    = {kwu204},
+
+  Abstract                 = {Normal renal function is essential for vitamin D metabolism, but it is unclear whether circulating vitamin D is associated with risk of renal cell carcinoma ({RCC}). We assessed whether 25-hydroxyvitamin D3 (25({OH})D3) was associated with risk of {RCC} and death after {RCC} diagnosis in the European Prospective Investigation into Cancer and Nutrition ({EPIC}). {EPIC} recruited 385,747 participants with blood samples between 1992 and 2000. The current study included 560 {RCC} cases, 557 individually matched controls, and 553 additional controls. Circulating 25({OH})D3 was assessed by mass spectrometry. Conditional and unconditional logistic regression models were used to calculate odds ratios and 95\% confidence intervals. Death after {RCC} diagnosis was assessed using Cox proportional hazards models and flexible parametric survival models. A doubling of 25({OH})D3 was associated with 28\% lower odds of {RCC} after adjustment for season of and age at blood collection, sex, and country of recruitment (odds ratio = 0.72, 95\% confidence interval: 0.60, 0.86; P = 0.0004). This estimate was attenuated somewhat after additional adjustment for smoking status at baseline, circulating cotinine, body mass index (weight (kg)/height (m)2), and alcohol intake (odds ratio = 0.82, 95\% confidence interval: 0.68, 0.99; P = 0.038). There was also some indication that both low and high 25({OH})D3 levels were associated with higher risk of death from any cause among {RCC} cases.},
+  Doi                      = {10.1093/aje/kwu204},
+  File                     = {Full Text PDF:/home/mullerd/Dropbox/Library/zotero/storage/26HHA54V/Muller et al. - 2014 - Circulating 25-Hydroxyvitamin D3 in Relation to Re.pdf:application/pdf;Snapshot:/home/mullerd/Dropbox/Library/zotero/storage/2HCFS9D7/aje.html:text/html},
+  ISSN                     = {0002-9262, 1476-6256},
+  Keywords                 = {Nested case-control study, Prospective study, renal cell carcinoma, vitamin D},
+  Language                 = {en},
+  Owner                    = {mullerd},
+  Timestamp                = {2014.10.28}
+}
+
 @Article{muller_second_2011,
   Title                    = {Second to fourth digit ratio ({2D:4D)} and concentrations of circulating sex hormones in adulthood},
   Author                   = {Muller, David C. and Giles, Graham G. and Bassett, Julie and Morris, Howard A. and Manning, John T. and Hopper, John L. and English, Dallas R. and Severi, Gianluca},
