--- a/text/vitd_rcc_surv.tex
+++ b/text/vitd_rcc_surv.tex
@@ -103,17 +103,17 @@ of RCC is inversely associated with risk of death. \newline
 
 
 \section*{Introduction}
-More than 300,000 kidney cancer cases are diagnosed yearly worldwide leading to 
-approximately 130,000 deaths \cite{ferlay_cancer_2013}. The prognosis is 
-strongly dependent on stage at diagnosis, with around 90\% of stage I patients 
-alive five years after diagnosis, comparted with only 10\% of stage IV patients 
-\cite{CRUK_kidney_2014}.
+Each year more than 300,000 new cases of kidney cancer are diagnosed worldwide, 
+leading to approximately 130,000 deaths \cite{ferlay_cancer_2013}. The prognosis 
+is strongly dependent on stage at diagnosis, with around 90\% of stage I 
+patients alive five years after diagnosis, compared with only 10\% of stage IV 
+patients \cite{CRUK_kidney_2014}.
 
 Little is known about factors influencing survival after diagnosis of kidney 
 cancer, apart from tumor stage and grade. We recently investigated circulating 
 vitamin D and kidney cancer onset and survival in a prospective epidemiological 
 cohort where blood samples were collected at entry to the cohort, an average 
-of 7 years before diagnosis [Muller et al., in press]. We reported an inverse 
+of 7 years before diagnosis \cite{muller_circulating_2014}. We reported an inverse 
 association between vitamin D concentrations and risk of subsequent kidney 
 cancer, and an increased rate of death after kidney cancer diagnosis for both 
 low and high concentrations of vitamin D. Available data did not allow thorough 
@@ -128,40 +128,44 @@ of stage or other prognostic factors.
 \section*{Methods}
 \subsection*{The K2 study}
 Participants included patients who were above 18 years of age and diagnosed 
-with kidney cancer in one of 6 participating centres in Czech Republic (4 
-centres), Romania (Bucharest), and Russia (Moscow). After obtaining informed 
-consent, participants were given a standardized face-to-face lifestyle 
+with kidney cancer in one of 6 participating centres in Czech Republic, 1 
+center in Romania, and 1 center in Russia. We gave 
+participants a standardized face-to-face short lifestyle 
 questionnaire covering socio-demographic characteristics, anthropometric 
 measures, medical history, family history, and tobacco and alcohol use. 
 Clinical and pathological data were abstracted from medical charts and 
 pathological reports. A majority of participants underwent nephrectomy and the 
 tumor was histologically confirmed. Follow-up for outcome (relapse, vital 
 status, and cause of death where relevant) was performed every 6 to 12 months 
-after diagnosis, using passive follow-up methods where possible and active 
-follow-up methods when no linkage to databases was possible.
+after diagnosis, using passive follow-up methods where possible (with 
+confirmation of vital status through active follow-up methods in case of 
+uncertainties), and active follow-up methods when no linkage to databases was 
+possible. The study protocol was approved by the institutional review boards of the 
+International Agency for Research on Cancer and all collaborating institutions, and 
+we obtained written informed consent from all participants. 
 
 \subsection*{Case-cohort sampling}
 Among 2330 participants with questionnaire data available and a diagnosis of 
-renal cell carcinoma (RCC) according to ICDO-3, we excluded 125 participants 
+renal cell carcinoma (RCC), we excluded 125 participants 
 with no plasma sample available, 1005 participants with no follow-up data at 
 the time of this project, 5 participants with inconsistencies in reference 
 dates, and 7 participants with no information on stage. From the 1188 
 remaining, we randomly selected 500 participants at baseline (the subcohort). 
 We also included all participants who died during follow-up that were not 
 randomly selected in to the subcohort ($N=93$), as well as 37 stage IV patients 
-that had survived and were not randomly selected, hence a total of 
-630 participants for laboratory analysis. Of these, one participant ended up 
-being classified as spindle cell sarcoma.
+that had survived and were not randomly selected. Hence a total of 
+630 participants diagnosed with kidney cancer were included in the study.
 
 \subsection*{Biosample processing and biochemical analysis}
 Venous blood was obtained before or at the time of the nephrectomy, prior to 
 any treatment. Blood was collected in vacutainers containing 
 ethylenediaminetetraacetic acid (EDTA), and processed as rapidly as possible 
-(usually within two hours) to temporary store plasma samples at -80C in all 
-centers, except in Ceske Budejovice where samples were stored at -20C. Samples 
-were transported at -80C to IARC for central storage at -150C. Samples 
-underwent a single thawing cycle for aliquoting of 400uL for shipment at -80C 
-to the laboratory for analysis. Liquid chromatography coupled to tandem 
+(usually within two hours). Plasma samples were stored at $-80^{\circ}$C, 
+except in Ceske Budejovice, Czech Republic, where samples were stored at 
+$-20^{\circ}$C. All samples were transported at $-80^{\circ}$C to IARC for 
+long-term storage at $-150^{\circ}$C. Samples underwent a single thawing cycle 
+for aliquoting of 400uL for shipment to the Bevital laboratory in Bergen, 
+Norway, for analysis. Liquid chromatography coupled to tandem 
 mass spectrometry was used to separately analyse vitamin D as 25(OH)D$_2$ and 
 25(OH)D$_3$ \cite{midttun_determination_2011}. 25(OH)D$_2$ was undetectable in 
 the majority of samples, so our analyses focus on 25(OH)D$_3$. The lab is DEQAS 
@@ -275,13 +279,14 @@ specific to post RCC survival.
 
 \section*{Acknowledgements}
 \noindent Funding:
-The World Cancer Research Fund (UK) supported the biochemical analyses. The 
-funding organization had no role in design and conduct of the study; collection, 
-management, analysis, and interpretation of the data; preparation, review, or 
-approval of the manuscript. The work undertaken by DCM that was reported in this 
-paper was done so during the tenure of an IARC-Australia Postdoctoral Fellowship 
-from the International Agency for Research on Cancer, supported by the Cancer 
-Council Australia. 
+The World Cancer Research Fund (UK) supported the biochemical analyses. This work was 
+also supported by a grant from the NCI (U01-CA155309), and the Ministry of Health 
+Czech Republic -- DRO (MMCI, 00209805). The funding organization had no role in 
+design and conduct of the study; collection, management, analysis, and 
+interpretation of the data; preparation, review, or approval of the manuscript. The 
+work undertaken by DCM that was reported in this paper was done so during the tenure 
+of an IARC-Australia Postdoctoral Fellowship from the International Agency for 
+Research on Cancer, supported by the Cancer Council Australia. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% #5 references
