Incorporate Mattias' edits

--- a/text/vitd_rcc_surv.tex
+++ b/text/vitd_rcc_surv.tex
@@ -50,8 +50,9 @@
 survival after diagnosis with kidney cancer. 
 
 \noindent \textbf{Authors:} David C Muller$^1$, Mattias Johansson$^1$, David 
-Zaridze$^2$, Vladimir Janout$^3$, Ivana Holcatova$^4$, Lenka Foretova$^5$, Dana 
-Mates$^6$, Paul Brennan$^1$, Ghislaine Scelo$^1$
+Zaridze$^2$, Vladimir Janout$^3$, Ivana Holcatova$^4$, Lenka 
+Foretova/Marie Navratilova$^5$, Dana Mates$^6$, {\O}ivind Midttun$^7$, 
+Per Magne Ueland$^{8, 9}$, Paul Brennan$^1$, Ghislaine Scelo$^1$
 
 {\footnotesize 
 \noindent
@@ -66,6 +67,10 @@ and Epidemiology, Prague, Czech Republic \newline
 5. Department of Cancer Epidemiology and Genetics, Masaryk Memorial Cancer 
 Institute, Brno, Czech Republic \newline
 6. National Institute of Public Health, Bucharest, Romania
+7. Bevital AS, Bergen, Norway \newline
+8. Department of Clinical Science, University of Bergen, Norway \newline
+9. Laboratory of Clinical Biochemistry, Haukeland University Hospital, Bergen, 
+Norway
 }
 
 \textbf{Corresponding author:} \newline
@@ -77,22 +82,23 @@ Institute, Brno, Czech Republic \newline
 %% #2 abstract
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
-\noindent \textbf{Background:} We assessed whether concentrations of vitamin D 
-at diagnosis of renal cell carcinoma (RCC) is associated with prognosis.  
+\noindent \textbf{Background:} We evaluate if concentrations of vitamin 
+D at diagnosis of renal cell carcinoma (RCC) is associated with prognosis.  
 \newline 
 \textbf{Methods:} We conducted a case-cohort study of 630 RCC cases from a 
 multi-centre case-control study in eastern Europe. Vitamin D was assessed as 
-25-Hydroxyvitamin D$_3$ [25(OH)D$_3$]. We used weighted Cox models to estimate 
+25-Hydroxyvitamin D$_3$ [25(OH)D$_3$], and weighted Cox models were used to 
+estimate 
 hazard ratios (HR) and 95\% confidence intervals (CI) by categories of 
 season-adjusted 25(OH)D$_3$.\newline 
 \textbf{Results:} Higher concentrations of 25(OH)D$_3$ 
 were associated with lower risk of death after adjusting for stage, age, sex, 
-and country (HR highest versus lowest category 0.57, 95\% CI [0.34, 0.97]). 
-This association did not vary by cause of death, though there was a suggestion 
-that it might be stronger for those diagnosed with early stage disease. 
+and country (HR highest versus lowest category 0.57, 95\% CI [0.34, 0.97]). The 
+inverse associations of 25(OH)D$_3$ with death were most notable among those who 
+died from non-RCC causes and those diagnosed with early stage disease. 
 \newline 
 \textbf{Conclusions:} 25(OH)D$_3$ concentration at diagnosis 
-of RCC is inversely associated with risk of death. \newline
+of RCC was inversely associated with all-cause mortality rates. \newline
 
 \end{abstract}
 
@@ -113,14 +119,17 @@ Little is known about factors influencing survival after diagnosis of kidney
 cancer, apart from tumor stage and grade. We recently investigated circulating 
 vitamin D and kidney cancer onset and survival in a prospective epidemiological 
 cohort where blood samples were collected at entry to the cohort, an average 
-of 7 years before diagnosis \cite{muller_circulating_2014}. We reported an inverse 
-association between vitamin D concentrations and risk of subsequent kidney 
-cancer, and an increased rate of death after kidney cancer diagnosis for both 
-low and high concentrations of vitamin D. Available data did not allow thorough 
-analysis of cause-specific mortality, nor were we able to adjust for stage. This 
-observation prompted us to investigate whether vitamin D concentrations at  
-diagnosis of kidney cancer are associated with subsequent survival, independent 
-of stage or other prognostic factors.   
+of 7 years before diagnosis \cite{muller_circulating_2014}. We reported an 
+inverse association between vitamin D concentrations and risk of subsequent 
+kidney cancer, an observation consistent with a recent study, in which 
+investigators had estimated vitamin D levels \cite{joh_predicted_2013}. 
+Further, we observed an increased rate of death after kidney cancer diagnosis 
+for both low and high concentrations of vitamin D. Available data did not allow 
+thorough analysis of cause-specific mortality, nor were we able to adjust for 
+stage. This observation prompted us to investigate whether vitamin D 
+concentrations measured at kidney cancer diagnosis are associated with 
+subsequent survival, and if such an association is independent of stage or 
+other prognostic factors.   
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% #3 methods 
@@ -217,12 +226,15 @@ Hazard of death from any cause was inversely associated with
 circulating concentrations of 25(OH)D$_3$ (Table~2). After adjusting for 
 stage, age, and sex, the hazard was 43\% lower among those in the highest 
 compared to the lowest group of seasonally-adjusted concentration 
-(HR$_{4\text{vs}1}$ 0.57, 95\% CI [0.34, 0.97]). A competing risks analysis 
-found no evidence of heterogeneity by cause of death, suggesting that this 
-association was not specific to deaths from RCC (Table~2). The HR for 
-continuously varying 25(OH)D$_3$ (relative to a concentration of 50 nmol/L) is 
-presented in Figure~1. These estimates corroborate those in Table~2, suggesting 
-a monotonic inverse association between 25(OH)D$_3$ and hazard of death.
+(HR$_{4\text{vs}1}$ 0.57, 95\% CI [0.34, 0.97]). Although no statistical 
+evidence for heterogeneity by cause of death was noted 
+($P_\text{heterogeneity}$ 0.53), we estimated HR$_{4\text{vs}1}$ of 0.77 
+(95\% CI 0.39, 1.24) for RCC specific death, and 0.36 (95\% CI 0.14, 0.91) for 
+non-RCC causes of death, suggesting that this association was not specific to 
+RCC death (Table~2). The HR for continuously varying 25(OH)D$_3$ (relative to a 
+concentration of 50 nmol/L) is presented in Figure~1. These estimates 
+corroborate those in Table~2, suggesting a monotonic inverse association between 
+25(OH)D$_3$ and hazard of death.
 
 Figure~2 presents HRs for a doubling in seasonally adjusted 25(OH)D$_3$ 
 concentration separately by categories of several potential effect modifiers. 
@@ -230,7 +242,7 @@ The estimated magnitude of the association was consistent by, sex, stage,
 histology, history of diabetes, smoking status, and alcohol intake status. 
 There was some indication that the association might be stronger among those 
 diagnosed at age 65 years or older, those with a history of hypertension, those 
-with higher BMI, or those diagnosed with stage I or II RCC, but there was 
+with higher BMI, and those diagnosed with stage I or II RCC, but there was 
 little statistical evidence of interaction with any of these factors. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -239,26 +251,27 @@ little statistical evidence of interaction with any of these factors.
 \section*{Discussion}
 We investigated whether differences in circulating concentrations of 
 25(OH)D$_3$ at the time of diagnosis of RCC were associated with all-cause and 
-cause-specific survival. We observed that higher concentrations of 25(OH)D$_3$ 
-were associated with a lower rate of death, and that the 
-association was not restricted to RCC specific death. We also observed an 
-indication that the strength of this association might vary by other factors.
-Most notably the association appeared somewhat stronger for those with a 
-history of hypertension, advanced age at diagosis, or eary stage disease.
+RCC-specific survival. We observed that higher concentrations of 25(OH)D$_3$ 
+were associated with a lower rate of death, but that this association was not 
+restricted to RCC specific death. We also observed an indication this 
+association might be somewhat stronger for those with a 
+history of hypertension, advanced age at diagosis, or early stage disease.
 
-This investigation was motivated by our recent study of circulating 25(OH)D$_3$ 
-and risk of RCC in the prospective EPIC cohort [Muller et al., in press], in 
-which we observed an inverse association between 25(OH)D$_3$ and risk of RCC. 
-Pre-diagnostic 25(OH)D$_3$ was also associated with post RCC mortality, with 
-both low and high concentrations associated with an increased rate of death 
-among RCC cases. The results from the present study are not completely 
-consistent with these initial findings. We found no evidence of increased rate 
-of death among patients with high 25(OH)D$_3$ at diagnosis, but rather an 
-inverse association between 25(OH)D$_3$ and all-cause mortality across the 
-range of observed concentrations.
+We recently studied circulating 25(OH)D$_3$ and RCC risk of RCC in a prospective
+case-control study nested within the EPIC cohort \cite{muller_circulating_2014}.
+This analysis indicated an inverse association between 
+25(OH)D$_3$ and risk of RCC as well as a non-linear U-shaped association 
+between pre-diagnostic 25(OH)D$_3$ and all-cause mortality after diagnosis 
+of RCC. This observation prompted us to conduct the current analysis in newly 
+diagnosed RCC cases with complete information on disease stage 
+and cause of death. Results from the present study are not completely 
+consistent with these initial findings from EPIC. In particular, we found no 
+evidence of increased rate of death among patients with high 25(OH)D$_3$ at 
+diagnosis, but rather an inverse association between 25(OH)D$_3$ and all-cause 
+mortality across the range of observed concentrations.
 
-There is a large literature regarding circulating vitamin D and all-cause 
-mortality in general populations. Consistent with our observation, many studies 
+Many studies have investigated circulating vitamin D and all-cause 
+mortality in general populations. Consistent with our observation, many of these
 have reported high risk of death for people with low concentrations 
 \cite{schottker_strong_2013, virtanen_association_2011, hutchinson_low_2010, 
 szulc_serum_2009, semba_low_2009, pilz_vitamin_2009, 
@@ -273,9 +286,9 @@ among RCC patients.
 
 In summary, we found that high 25(OH)D$_3$ at diagnosis of RCC was associated 
 with lower risk of death. This association was not restricted to RCC 
-cause-specific death, and appeared stronger for early stage disease, suggesting 
-that it might reflect a more general phenomenon rather than something 
-specific to post RCC survival.  
+cause-specific death, and appeared stronger for early stage disease, 
+supporting the notion of 25(OH)D$_3$ being associated with lower overall death 
+rates in general, rather than RCC prognosis specifically. 
 
 \section*{Acknowledgements}
 \noindent Funding:
