Incorporate edits from Ghislaine

--- a/analysis/output/o08_descriptive_by_vitstat.tex
+++ b/analysis/output/o08_descriptive_by_vitstat.tex
@@ -26,7 +26,7 @@ Smoking & Never smoker  & $213$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hs
  & Former smoker  & $108$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$25$} & $\phantom{0}54$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$27$} & $162$ \\
  & Current smoker  & $106$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$25$} & $\phantom{0}57$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$28$} & $163$ \\
  & \\ %  &  & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$100$} &  & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$100$} &  \\
-Diabetic & Yes  & $\phantom{0}65$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$15$} & $\phantom{0}39$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$19$} & $104$ \\
+Diabetes & Yes  & $\phantom{0}65$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$15$} & $\phantom{0}39$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$19$} & $104$ \\
  & No  & $362$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$85$} & $164$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$81$} & $526$ \\
  & \\ %  &  & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$100$} &  & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$100$} &  \\
 Hypertension & Yes  & $233$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$55$} & $103$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$51$} & $336$ \\
@@ -39,10 +39,10 @@ Stage & I  & $269$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcols
  & IV  & $\phantom{0}63$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$15$} & $101$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$50$} & $164$ \\
  & missing  & $\phantom{00}1$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$\phantom{0}0$} & $\phantom{00}0$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$\phantom{0}0$} & $\phantom{00}1$ \\
  & \\ %  &  & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$100$} &  & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$100$} &  \\
-Grade & I  & $\phantom{0}73$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$17$} & $\phantom{00}7$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$\phantom{0}3$} & $\phantom{0}80$ \\
- & II  & $173$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$41$} & $\phantom{0}53$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$26$} & $226$ \\
- & III  & $\phantom{0}67$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$16$} & $\phantom{0}50$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$25$} & $117$ \\
- & IV  & $\phantom{0}15$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$\phantom{0}4$} & $\phantom{0}18$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$\phantom{0}9$} & $\phantom{0}33$ \\
+Grade & 1  & $\phantom{0}73$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$17$} & $\phantom{00}7$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$\phantom{0}3$} & $\phantom{0}80$ \\
+ & 2  & $173$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$41$} & $\phantom{0}53$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$26$} & $226$ \\
+ & 3  & $\phantom{0}67$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$16$} & $\phantom{0}50$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$25$} & $117$ \\
+ & 4  & $\phantom{0}15$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$\phantom{0}4$} & $\phantom{0}18$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$\phantom{0}9$} & $\phantom{0}33$ \\
  & missing  & $\phantom{0}99$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$23$} & $\phantom{0}75$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$37$} & $174$ \\
  & \\ %  &  & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$100$} &  & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$100$} &  \\
 Histology & Conventional RCC  & $357$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$84$} & $161$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$79$} & $518$ \\
