--- a/text/vitd_rcc_surv.tex
+++ b/text/vitd_rcc_surv.tex
@@ -49,10 +49,10 @@
 \noindent \textbf{Title:} Circulating 25-Hydroxyvitamin D$_3$ and 
 survival after diagnosis with kidney cancer. 
 
-\noindent \textbf{Authors:} David C Muller$^1$, Mattias Johansson$^1$, David 
-Zaridze$^2$, Vladimir Janout$^3$, Ivana Holcatova$^4$, Lenka 
-Foretova/Marie Navratilova$^5$, Dana Mates$^6$, {\O}ivind Midttun$^7$, 
-Per Magne Ueland$^{8, 9}$, Paul Brennan$^1$, Ghislaine Scelo$^1$
+\noindent \textbf{Authors:} David C Muller (1), Ghislaine Scelo (1),  David 
+Zaridze (2), Vladimir Janout (3), Ivana Holcatova (4), Lenka 
+Foretova/Marie Navratilova (5), Dana Mates (6), {\O}ivind Midttun (7), 
+Per Magne Ueland (8,9), Paul Brennan (1), Mattias Johansson (1).
 
 {\footnotesize 
 \noindent
@@ -73,7 +73,7 @@ Institute, Brno, Czech Republic \newline
 Norway
 }
 
-\textbf{Corresponding author:} \newline
+\textbf{Corresponding authors:} 
 
 
 
@@ -82,13 +82,12 @@ Norway
 %% #2 abstract
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
-\noindent \textbf{Background:} We evaluate if concentrations of vitamin 
+\noindent \textbf{Background:} We evaluated whether concentrations of vitamin 
 D at diagnosis of renal cell carcinoma (RCC) is associated with prognosis.  
 \newline 
 \textbf{Methods:} We conducted a case-cohort study of 630 RCC cases from a 
 multi-centre case-control study in eastern Europe. Vitamin D was assessed as 
-25-Hydroxyvitamin D$_3$ [25(OH)D$_3$], and weighted Cox models were used to 
-estimate 
+25-Hydroxyvitamin D$_3$ [25(OH)D$_3$], and we used weighted Cox models to estimate 
 hazard ratios (HR) and 95\% confidence intervals (CI) by categories of 
 season-adjusted 25(OH)D$_3$.\newline 
 \textbf{Results:} Higher concentrations of 25(OH)D$_3$ 
@@ -98,7 +97,8 @@ inverse associations of 25(OH)D$_3$ with death were most notable among those who
 died from non-RCC causes and those diagnosed with early stage disease. 
 \newline 
 \textbf{Conclusions:} 25(OH)D$_3$ concentration at diagnosis 
-of RCC was inversely associated with all-cause mortality rates. \newline
+of RCC was inversely associated with all-cause mortality rates, but not specifically 
+with RCC outcome. \newline
 
 \end{abstract}
 
@@ -127,7 +127,7 @@ Further, we observed an increased rate of death after kidney cancer diagnosis
 for both low and high concentrations of vitamin D. Available data did not allow 
 thorough analysis of cause-specific mortality, nor were we able to adjust for 
 stage. This observation prompted us to investigate whether vitamin D 
-concentrations measured at kidney cancer diagnosis are associated with 
+concentrations in blood at kidney cancer diagnosis are associated with 
 subsequent survival, and if such an association is independent of stage or 
 other prognostic factors.   
 
@@ -137,7 +137,7 @@ other prognostic factors.
 \section*{Methods}
 \subsection*{The K2 study}
 Participants included patients who were above 18 years of age and diagnosed 
-with kidney cancer in one of 6 participating centres in Czech Republic, 1 
+with kidney cancer in one of 4 participating centres in Czech Republic, 1 
 center in Romania, and 1 center in Russia. We gave 
 participants a standardized face-to-face short lifestyle 
 questionnaire covering socio-demographic characteristics, anthropometric 
