Minor re-wording

--- a/text/vitd_rcc_surv.tex
+++ b/text/vitd_rcc_surv.tex
@@ -121,7 +121,7 @@ vitamin D and kidney cancer onset and survival in a prospective epidemiological
 cohort where blood samples were collected at entry to the cohort, an average 
 of 7 years before diagnosis \cite{muller_circulating_2014}. We reported an 
 inverse association between vitamin D concentrations and risk of subsequent 
-kidney cancer, an observation consistent with a recent study, in which 
+kidney cancer, an observation consistent with another recent study in which 
 investigators had estimated vitamin D levels \cite{joh_predicted_2013}. 
 Further, we observed an increased rate of death after kidney cancer diagnosis 
 for both low and high concentrations of vitamin D. Available data did not allow 
