Changed to author-year referencing for BJC

--- a/text/bibtex/library_vitd.bib
+++ b/text/bibtex/library_vitd.bib
@@ -448,6 +448,25 @@
   Language                 = {en}
 }
 
+@Misc{CRUK_kidney_2014,
+  Title                    = {Statistics and outlook for kidney cancer},
+
+  Author                   = {{Cancer Research UK}},
+  Month                    = {April},
+  Note                     = {Accessed: 28 May 2014},
+  Year                     = {2014},
+
+  Copyright                = {Cancer Research {UK}},
+  File                     = {Snapshot:/home/mullerd/Dropbox/Library/zotero/storage/ZBGKCMGW/statistics-and-outlook-for-kidney-cancer.html:text/html},
+  Keywords                 = {age, grade, kidney cancer, outcome, outlook, performance status, prognosis, ps, renal cell, stage, statistics, Survival},
+  Language                 = {Eng},
+  Owner                    = {mullerd},
+  Timestamp                = {2014.05.28},
+  Type                     = {Website},
+  Url                      = {http://www.cancerresearchuk.org/cancer-help/type/kidney-cancer/treatment/statistics-and-outlook-for-kidney-cancer#stage},
+  Urldate                  = {2014-05-28}
+}
+
 @Book{r_epi_2013,
   Title                    = {Epi: A Package for Statistical Analysis in Epidemiology},
   Author                   = {Carstensen, Bendix and Plummer, Martyn and Laara, Esa and Hills, Michael},
@@ -1856,7 +1875,7 @@
 
 @Article{muller_circulating_2014,
   Title                    = {Circulating 25-Hydroxyvitamin D3 in Relation to Renal Cell Carcinoma Incidence and Survival in the {EPIC} Cohort},
-  Author                   = {Muller, David C. and Fanidi, Anouar and Midttun, {\O}ivind and Steffen, Annika and Dossus, Laure and Boutron-Ruault, Marie-Christine and Severi, Gianluca and K\"uhn, Tilman and Katzke, Verena and Torre, Ram\'on Alonso de la and Gonz\'alez, Carlos A. and S\'anchez, Mar\'ia-Jos\'e and Dorronsoro, Miren and Santiuste, Carmen and Barricarte, Aurelio and Khaw, Kay-Tee and Wareham, Nick and Travis, Ruth C. and Trichopoulou, Antonia and Giotaki, Maria and Trichopoulos, Dimitrios and Palli, Domenico and Krogh, Vittorio and Tumino, Rosario and Vineis, Paolo and Panico, Salvatore and Tj\onneland, Anne and Olsen, Anja and Bueno-de-Mesquita, H. Bas and Peeters, Petra H. and Ljungberg, B\"orje and Wennberg, Maria and Weiderpass, Elisabete and Murphy, Neil and Riboli, Elio and Ueland, Per Magne and Boeing, Heiner and Brennan, Paul and Johansson, Mattias},
+  Author                   = {Muller, David C. and Fanidi, Anouar and Midttun, {\O}ivind and Steffen, Annika and Dossus, Laure and Boutron-Ruault, Marie-Christine and Severi, Gianluca and K\"uhn, Tilman and Katzke, Verena and Torre, Ram\'on Alonso de la and Gonz\'alez, Carlos A. and S\'anchez, Mar\'ia-Jos\'e and Dorronsoro, Miren and Santiuste, Carmen and Barricarte, Aurelio and Khaw, Kay-Tee and Wareham, Nick and Travis, Ruth C. and Trichopoulou, Antonia and Giotaki, Maria and Trichopoulos, Dimitrios and Palli, Domenico and Krogh, Vittorio and Tumino, Rosario and Vineis, Paolo and Panico, Salvatore and Tj{\o}nneland, Anne and Olsen, Anja and Bueno-de-Mesquita, H. Bas and Peeters, Petra H. and Ljungberg, B\"orje and Wennberg, Maria and Weiderpass, Elisabete and Murphy, Neil and Riboli, Elio and Ueland, Per Magne and Boeing, Heiner and Brennan, Paul and Johansson, Mattias},
   Journal                  = {American Journal of Epidemiology},
   Year                     = {2014},
 
@@ -2970,22 +2989,5 @@
   Abstract                 = {Background Accurate risk prediction plays a key role in disease prevention and disease management; emergence of new biomarkers may lead to an important question about how much improvement in prediction accuracy it would achieve by adding the new markers into the existing risk prediction tools. Purpose In large prospective cohort studies, the standard full-cohort design, requiring marker measurement on the entire cohort, may be infeasible due to cost and low rate of the clinical condition of interest. To overcome such difficulties, nested case–control ({NCC)} studies provide cost-effective alternatives but bring about challenges in statistical analyses due to complex data sets generated. Methods To evaluate prognostic accuracy of a risk model, Cai and Zheng proposed a class of nonparametric inverse probability weighting ({IPW)} estimators for accuracy measures in the time-dependent receiver operating characteristic curve analysis. To accommodate a three-phase {NCC} design in Nurses’ Health Study, we extend the double {IPW} estimators of Cai and Zheng to develop risk prediction models under time-dependent generalized linear models and evaluate the incremental values of new biomarkers and genetic markers. Results Our results suggest that aggregating the information from both the genetic markers and biomarkers substantially improves the accuracy for predicting 5-year and 10-year risks of rheumatoid arthritis. Conclusions Our method provided robust procedures to evaluate the incremental value of new biomarkers allowing for complex sampling designs.},
   ISSN                     = {1740-7745, 1740-7753},
   Language                 = {en}
-}
-
-@Misc{CRUK_kidney_2014,
-  Title                    = {Statistics and outlook for kidney cancer},
-  Month                    = {April},
-  Note                     = {Accessed: 28 May 2014},
-  Year                     = {2014},
-
-  Copyright                = {Cancer Research {UK}},
-  File                     = {Snapshot:/home/mullerd/Dropbox/Library/zotero/storage/ZBGKCMGW/statistics-and-outlook-for-kidney-cancer.html:text/html},
-  Keywords                 = {age, grade, kidney cancer, outcome, outlook, performance status, prognosis, ps, renal cell, stage, statistics, Survival},
-  Language                 = {Eng},
-  Owner                    = {mullerd},
-  Timestamp                = {2014.05.28},
-  Type                     = {Website},
-  Url                      = {http://www.cancerresearchuk.org/cancer-help/type/kidney-cancer/treatment/statistics-and-outlook-for-kidney-cancer#stage},
-  Urldate                  = {2014-05-28}
 }
 
